RESOLVED FIXED89091
[BlackBerry] empty plugin cause browser hang
https://bugs.webkit.org/show_bug.cgi?id=89091
Summary [BlackBerry] empty plugin cause browser hang
Mary Wu
Reported 2012-06-14 04:57:29 PDT
related to empty plugin, click an empty "*.swf" link, it launch flash plugin, and shows blank page since no content. however when go back and click other links on the page, it hangs. It's because FrameLoaderBlackBerry didn't check its content when clear m_pluginView.
Attachments
Patch (1.74 KB, patch)
2012-06-14 05:17 PDT, Mary Wu
no flags
Mary Wu
Comment 1 2012-06-14 05:17:51 PDT
Rob Buis
Comment 2 2012-06-14 07:20:20 PDT
Comment on attachment 147560 [details] Patch LGTM. Should the actual hang be checked as well? I am not sure why calling m_pluginView->didFinishLoading should cause a hang.
Mary Wu
Comment 3 2012-06-14 19:09:36 PDT
(In reply to comment #2) > (From update of attachment 147560 [details]) > LGTM. Should the actual hang be checked as well? I am not sure why calling m_pluginView->didFinishLoading should cause a hang. in PlugView.cpp, m_pluginView->didFinishLoading will call "m_manualStream->didFinishLoading(0);" without checking if m_manualStream is null or not. m_manualStream was created in didReceiveResponse which won't be hit for empty plugin. Add check m_hasSentResponseToPlugin before finishLoading so it won't core dump in such case.
WebKit Review Bot
Comment 4 2012-06-14 22:24:40 PDT
Comment on attachment 147560 [details] Patch Clearing flags on attachment: 147560 Committed r120399: <http://trac.webkit.org/changeset/120399>
WebKit Review Bot
Comment 5 2012-06-14 22:24:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.