[BlackBerry] empty plugin cause browser hang https://bugs.webkit.org/show_bug.cgi?id=89091

Reviewed by Rob Buis.

Add check before clean pluginView in FrameLoaderBlackBerry in case
it didn't have any content.
RIM PR# 165336
Reviewed internally by George Staikos

* WebCoreSupport/FrameLoaderClientBlackBerry.cpp:
(WebCore::FrameLoaderClientBlackBerry::finishedLoading):


Canonical link: https://commits.webkit.org/107013@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120399 268f45cc-cd09-0410-ab3c-d52691b4dbfc